--- a/practice.html
+++ b/practice.html
@@ -9,5 +9,7 @@
      <h1>Practice</h1>
      <p>GitHub is a Google Drive for our code</p>
      <p>It provides cloud storage + collaboration platform</p>
+     <h2>GitHub LifeCycle</h2>
+     <p><b>Working Directory -> Staging Area -> Local Repository -> Remote Repository</p>
 </body>
 </html>
